# reaktoro-pse

./: pyproject.toml  requirements-dev.txt
.github/workflows/: checks.yml
src/reaktoro_pse/: reaktoro_block.py
src/reaktoro_pse/core/: reaktoro_block_builder.py  reaktoro_gray_box.py  reaktoro_inputs.py  reaktoro_outputs.py  reaktoro_solver.py  reaktoro_state.py
src/reaktoro_pse/core/tests/: test_reaktoro_builder.py
src/reaktoro_pse/examples/: biogas_combustion.py  simple_desalination.py  simple_ion_exchange.py  thermal_precipitation.py
src/reaktoro_pse/examples/reaktoro_pse_to_phreeqc_comparison/: standard_model.py
src/reaktoro_pse/parallel_tools/: parallel_manager.py  reaktoro_block_manager.py
src/reaktoro_pse/parallel_tools/tests/: test_manager.py
src/reaktoro_pse/reaktoro_block_config/: jacobian_options.py
src/reaktoro_pse/tests/: test_reaktoro_block.py
src/reaktoro_pse/tutorials/: basic_reaktoro_block_interaction.ipynb  integration_with_ro.ipynb
