[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 7",
]
build-backend = "setuptools.build_meta"

[project]
name = "reaktoro-pse"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "pyomo",
    "watertap-solvers @ git+https://github.com/watertap-org/watertap-solvers@24.12.9",
]
[project.optional-dependencies]
testing = [
    "pytest>=8",
    "nbmake",
]

[tool.setuptools_scm]
# https://setuptools-scm.readthedocs.io/en/v8.1.0/extending/
version_scheme = "only-version"
local_scheme = "node-and-date"